# futsuperstition-api

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/controllers/: competitions.py  dashboard.py  jerseys.py  locals.py  options.py  stadiums.py  teams.py
src/database/: config.py
src/database/models/: competitions.py  games.py  jerseys.py  locals.py  stadiums.py  teams.py
src/routes/: competitions.py  dashboard.py  jerseys.py  locals.py  options.py  pong.py  stadiums.py  teams.py
src/services/: competitions.py  dashboard.py  jerseys.py  locals.py  options.py  pong.py  stadiums.py  teams.py
