[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kenaioz <silvio.cesarrx@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pytest = "^8.2.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
